--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,7 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "name": "C/C++: cl.exe build and debug active file",
-        "type": "cppvsdbg",
-        "request": "launch",
-        "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": false,
-        "preLaunchTask": "C/C++: cl.exe build active file"
-      }
-    ]
-  }
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": []
+}
